--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.2"
+    "react-router-dom": "latest",
+    "react-scripts": "2.0.0",
+    "react-transition-group": "^2.2.1",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
