--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "background.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "build": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.0.2",
+    "express": "^4.17.1",
+    "react": "latest",
+    "react-dom": "latest",
     "react-router-dom": "latest",
     "react-scripts": "2.0.0",
     "react-transition-group": "^2.2.1",
-    "react": "latest",
-    "react-dom": "latest"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^4.7.2"
   }
 }
